# jupyterlab_autoversion

./: .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml
binder/: postBuild  requirements.txt
docs/: Makefile  api.md  conf.py  make.bat
js/: .eslintrc.js  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
js/src/: common.js  icon.js  index.js  index.ts  widget.js
js/src/extension/: jupyterlab_autoversion.json
js/tests/: activate.test.ts  export.test.ts  setup.js
jupyter-config/jupyter_notebook_config.d/: jupyterlab_autoversion.json
jupyterlab_autoversion/: __init__.py  _version.py  extension.py  handlers.py  hook.py
jupyterlab_autoversion/extension/: install.json
jupyterlab_autoversion/storage/git/: __init__.py  diff.py  handlers.py  hook.py
jupyterlab_autoversion/storage/sql/: __init__.py
jupyterlab_autoversion/tests/: test_all.py  test_extension.py  test_handlers.py  test_init.py
src/: index.ts
tests/: test_all.py  test_extension.py  test_handlers.py
